@@ -2,7 +2,8 @@ Versionsänderungen:
 ===================
 ####Version 1.4.2:    
 - Option hide="Personenanzeige_Lehrveranstaltungen" bei task="mitarbeiter-einzeln" ergänzt         
-- Parameter "sortiere_alphabet"=1 ergänzt für Mitarbeiter-Ausgabe    
+- Parameter show="sortiere_alphabet" ergänzt für Mitarbeiter-Ausgabe    
+- Parameter zeige_jobs="Leitung, Sekretariat" (z.B.) ergänzt für mitarbeiter-alle, um nur einzelne Rollen anzuzeigen    
 - Bugfix für Mitarbeiter mit gleichem Namen    
 - Bugfix Ausgabe mitarbeiter-alle     
 
